# amazon-eks-machine-learning-with-terraform-and-kubeflow

./: .gitignore  README.md  app.sh  build-ecr-images.sh  eks-workers-stack.sh  ml-ops-desktop-basic.yaml  ml-ops-desktop.yaml  prepare-efs.sh  pv-kubeflow-efs-gp-bursting.yaml  pvc-kubeflow-ebs-gp-bursting.yaml  pvc-kubeflow-efs-gp-bursting.yaml  quick-start.sh  run.sh  tensorpack.sh
charts/cluster-issuer/: Chart.yaml  values.yaml
charts/dex/: Chart.yaml  values.yaml
charts/ebs-sc/: Chart.yaml
charts/istio-ingress/: Chart.yaml  values.yaml
charts/karpenter-components/: Chart.yaml  values.yaml
charts/kubeflow-admission-webhook/: Chart.yaml
charts/kubeflow-central-dashboard/: Chart.yaml  values.yaml
charts/kubeflow-katib/: Chart.yaml
charts/kubeflow-notebooks/: Chart.yaml
charts/kubeflow-pipelines/: Chart.yaml
charts/kubeflow-profiles-and-kfam/: values.yaml
charts/kubeflow-roles/: Chart.yaml
charts/kubeflow-training-operator/: values.yaml
charts/kubeflow-user-defaults/: Chart.yaml
charts/kubeflow-user-profile/: Chart.yaml
charts/lws/: Chart.yaml  values.yaml
charts/maskrcnn/: Chart.yaml  requirements.yaml  values.yaml
charts/maskrcnn-jupyter/: Chart.yaml
charts/maskrcnn-optimized/: values.yaml
charts/mpi-operator/: Chart.yaml  values.yaml
charts/mpijob/: Chart.yaml
charts/neuron-device-plugin/: Chart.yaml
charts/neuron-scheduler/: Chart.yaml  values.yaml
charts/nvidia-device-plugin/: Chart.yaml
charts/oauth2-proxy-route/: Chart.yaml  values.yaml
charts/pv-efs/: Chart.yaml
charts/pv-fsx/: Chart.yaml
container/: Dockerfile
container-optimized/: Dockerfile
container-optimized-viz/: Dockerfile
container-optimized-viz/build_tools/: build_and_push.sh  set_env.sh
container-optimized-viz/notebooks/: mask-rcnn-tensorflow-viz.ipynb
container-optimized/build_tools/: build_and_push.sh  build_image.sh  set_env.sh
container-viz/: Dockerfile
container-viz/build_tools/: build_and_push.sh  set_env.sh
container-viz/notebooks/: mask-rcnn-tensorpack-viz.ipynb
container/build_tools/: build_and_push.sh  build_image.sh  create_and_upload_image_dh.sh  set_env.sh  upload_image_to_dockerhub.sh
containers/aws-samples-maskrcnn/: Dockerfile
containers/megatron-deepspeed/: Dockerfile
containers/nemo-megatron/: Dockerfile
docs/: upgrade-1.35.md
eks-cluster/: apply-cni-patch.sh  apply-nvidia-plugin.sh  attach-pvc-fsx.yaml  attach-pvc.yaml  aws-auth-cm.yaml  configure-eks-auth.sh  dynamic-fsx-sc.yaml  eks-cluster-vpc-stack.sh  eks-workers-stack.sh  install-eksctl.sh  install-kubectl-linux.sh  prepare-data.sh  prepare-efs.sh  prepare-s3-bucket.sh  pv-kubeflow-efs-gp-bursting.yaml  pv-kubeflow-fsx.yaml  pvc-dynamic-fsx.yaml  pvc-kubeflow-efs-gp-bursting.yaml  pvc-kubeflow-fsx.yaml  set-cluster.sh  stage-data-fsx.yaml  stage-data.yaml  stage-efs-data.yaml  stage-fsx-data.yaml  test-neuron.yaml  update-kubeconfig.sh  user-data.txt
examples/agentic/compliance-agent/: Dockerfile  build-and-deploy.sh  compliance-agent.yaml  pyproject.toml
examples/agentic/compliance-agent/src/: __init__.py  agent-card.json  agent.py  app.py  config.py  memory.py  tools.py
examples/agentic/eks-ops-agent/: Dockerfile  README.md  build-and-deploy.sh  build.sh  eks-ops-agent-workshop.ipynb  eks-ops-agent.ipynb  eks-ops-agent.yaml  memledger-0.4.0-py3-none-any.whl  memledger-composition-aws.yaml  memledger-composition-opensearch.yaml  memledger-composition-pgvector.yaml  memledger-composition.yaml  pyproject.toml  requirements.txt  setup.sh
examples/agentic/eks-ops-agent/iam/: memledger-composition-policy.json
examples/agentic/eks-ops-agent/manifests/: create-bedrock-secret.sh  eks-ops-agent.yaml  model-config-bedrock.yaml
examples/agentic/eks-ops-agent/scripts/: setup-engram-composition.sh
examples/agentic/eks-ops-agent/src/: __init__.py  agent-card.json  agent.py  app.py  config.py  memory.py  tools.py
examples/agentic/eks-ops-agent/v2-preview/: README.md  memledger-composition.yaml  setup-memledger-composition.sh
examples/agentic/eks-ops-agent/v2-preview/iam/: engram-composition-policy.json
sre-agent-workshop/: bootstrap-desktop.sh
(+1151 files in other folders)
