[project]
name = "compliance-agent"
version = "0.1.0"
description = "Compliance Agent - memory governance, RBAC enforcement, lifecycle management, trust attestation"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2.60",
    "langchain-aws>=0.2.10",
    "langchain-core>=0.3.28",
    "kagent-core==0.7.19",
    "kagent-langgraph==0.7.19",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Memory (memledger with pgvector + Bedrock embeddings)
# memledger wheel is installed separately in the Dockerfile
memory = [
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "boto3>=1.35.0",
]
# Observability
observability = [
    "langfuse>=2.0.0",
]
# All features
all = [
    "compliance-agent[memory,observability]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
